@@ -1,3 +1,14 @@
+2006-08-23  Bruno Haible  <bruno@clisp.org>
+
+	* hello.c (program_name): Renamed from progname. Make non-static.
+	(main): Update.
+
+2006-08-23  Bruno Haible  <bruno@clisp.org>
+
+	* system.h: Fix double-inclusion guard. Improve comments.
+	* hello.c (longopts): Make const and static.
+	(main): Convert to ANSI C definition.
+
 2006-08-20  Karl Berry  <karl@gnu.org>
 	
 	* hello.c (main): try a new style for the --version output.
